--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 typography_spectrum: 0.7197891601826996
+style: the-composer
 color:
   brandStrength: 0.5814404785633087
   lightness: 0.3894053774420172
